# layout-viewer

./: Cargo.toml  README.md  lv-native.code-workspace  lv-wasm.code-workspace  static.yml  styles.css
src/: app_controller.rs  app_window.rs  hover_effect.rs  lib.rs  main.rs
src/cli/: app_window.rs  generate_svg.rs  mod.rs  wgpu_window.rs
src/components/: home_page.rs  sidebar.rs  viewer_page.rs
src/core/: app_controller.rs  components.rs  hover_effect.rs  instancer.rs  layer.rs  layer_proxy.rs  loader.rs  mod.rs  path_outline.rs  project.rs  root_finder.rs  rtree.rs  triangulation.rs
src/graphics/: bounds.rs  camera.rs  geometry.rs  material.rs  mesh.rs  mod.rs  renderer.rs  ribbon.rs  scene.rs  vectors.rs  viewport.rs
src/rsutils/: colors.rs  id_map.rs  mod.rs  string_interner.rs
src/webui/: app.rs  home_page.rs  mod.rs  sidebar.rs  toast.rs  viewer_page.rs
