[package]
name = "layout-viewer"
version = "0.1.0"
edition = "2021"
description = "A GDSII layout viewer with SVG export capability"

[lib]
name = "layout_viewer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "layout-viewer"
path = "src/main.rs"

[dependencies]
gds21 = "0.2.0"
anyhow = "1.0"
svg = "0.13"
geo = "0.29.3"
indexmap = "2.2"
i_overlay = "2.0.0"
glow = "0.13"
nalgebra = "0.32"
bytemuck = "1.14"
log = "0.4"
rstar = "0.12.2"
bevy_ecs = "0.15.3"
futures = "0.3.31"
web-time = "1.1.0"

[patch.crates-io]
geo = { git = "https://github.com/georust/geo.git", rev = "2daf7cf" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
gloo = { version = "0.11.0", features = ["timers", "futures"] }
gloo-timers = "0.3.0"
web-sys = { version = "0.3", features = [
    "console",
    "WebGl2RenderingContext",
    "DataTransfer",
    "File",
    "FileList",
    "DragEvent",
    "DataTransferItemList",
    "DataTransferItem",
    "HtmlCanvasElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Element",
    "DomRect",
    "Storage",
    "Window",
    "TouchEvent",
    "TouchList",
    "Touch"
] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
stylist = { version = "0.13", features = ["yew"] }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
winit = "0.29"
raw-window-handle = "0.5"
glutin = "0.31"
glutin-winit = "0.4"
tokio = { version = "1.36", features = ["rt", "time"] }

[profile.release]
opt-level = 3
lto = true 
